--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Hackermi.github.com : Hacer Mi' world" />
+    <meta name="description" content="Hackermi.com : Hacker Mi' world" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -16,10 +16,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/HackerMi">View on GitHub</a>
-
-          <h1 id="project_title">Hackermi.github.com</h1>
-          <h2 id="project_tagline">Hacer Mi' world</h2>
+          <h1 id="project_title">Hackermi.com</h1>
+          <h2 id="project_tagline">Hacker Mi' world</h2>
 
         </header>
     </div>
