--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Hackermi.github.com</title>
+    <title>Hackermi.com</title>
   </head>
 
   <body>
@@ -17,7 +17,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <h1 id="project_title">Hackermi.com</h1>
-          <h2 id="project_tagline">Hacker Mi' world</h2>
+          <h2 id="project_tagline">Hacker Mi's world</h2>
 
         </header>
     </div>
