--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: 关于本人
 ---
 
 <div class="page-blank">
-    <h2>HakcerMi</h2>
+    <h2>HackerMi</h2>
     <div class="row">
         <div class="col-md-6">
             <p>普通码农一枚</p>
