add rss feature
Signed-off-by: HackerMi <wawi1985@163.com>

--- a/about.html
+++ b/about.html
@@ -15,11 +15,15 @@ title: 关于本人
             <ul class="list-group">
                 <li class="list-group-item">
                     <i class="fa fa-weibo"></i>
-                    <a href="http://weibo.com/u/1450496392">新浪微博</a>
+                    <a href="http://weibo.com/u/1450496392">&nbsp;新浪微博</a>
                 </li>
                 <li class="list-group-item">
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:wawi1985@163.com">Email</a>
+                    <a href="mailto:wawi1985@163.com">&nbsp;Email</a>
+                </li>
+                <li class="list-group-item">
+                    <i class="fa fa-rss"></i>
+                    <a href="/atom.xml">&nbsp;RSS</a>
                 </li>
             </ul>
         </div>
