change about page style
Signed-off-by: HackerMi <wawi1985@163.com>

--- a/about.html
+++ b/about.html
@@ -1,10 +1,9 @@
 ---
 layout: page
-title: 关于本人
+title: HackerMi
 ---
 
 <div class="page-blank">
-    <h2>HackerMi</h2>
     <div class="row">
         <div class="col-md-6">
             <p>普通码农一枚</p>
